--- a/.github/workflows/update-directory.yml
+++ b/.github/workflows/update-directory.yml
@@ -19,32 +19,8 @@ jobs:
 
       - name: Update DIRECTORY.md
         run: |
-          pip install pyyaml
-          
-          python - <<EOF
-          import os
-          import yaml
-
-          def update_directory():
-              directory_path = 'directory'
-              clones = []
-
-              for filename in os.listdir(directory_path):
-                  if filename.endswith('.yml'):
-                      with open(os.path.join(directory_path, filename), 'r') as file:
-                          clone_data = yaml.safe_load(file)
-                          clones.append(clone_data)
-
-              with open('DIRECTORY.md', 'w') as directory_file:
-                  directory_file.write("# Directory of Clones\n\n")
-                  directory_file.write("| Name | Description | Repository Link |\n")
-                  directory_file.write("|------|-------------|------------------|\n")
-                  for clone in clones:
-                      directory_file.write(f"| {clone['name']} | {clone['description']} | [{clone['name']}]({clone['repo_link']}) |\n")
-
-          if __name__ == "__main__":
-              update_directory()
-          EOF
+          pip install pyyaml requests
+          python3 indexer.py
 
       - name: Commit changes
         run: |
